@@ -37,10 +37,10 @@ import java.security.cert.X509Certificate;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.util.Base64;
 import javax.net.ssl.KeyManager;
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
-import javax.xml.bind.DatatypeConverter;
 import org.java_websocket.server.DefaultSSLWebSocketServerFactory;
 
 
@@ -98,7 +98,7 @@ public class SSLServerLetsEncryptExample {
     String data = new String(pem);
     String[] tokens = data.split(beginDelimiter);
     tokens = tokens[1].split(endDelimiter);
-    return DatatypeConverter.parseBase64Binary(tokens[0]);
+    return Base64.getDecoder().decode(tokens[0]);
   }
 
   private static RSAPrivateKey generatePrivateKeyFromDER(byte[] keyBytes)
